# Allegro-Vivace

./: .gitignore  CMakeLists.txt  main.c  readme.md
src/: alien.c  alien.h  audio.c  audio.h  display.c  display.h  fx.c  fx.h  global_variables.h  hud.c  hud.h  init.c  init.h  keyboard.c  keyboard.h  ship.c  ship.h  shot.c  shot.h  sprites.c  sprites.h  stars.c  stars.h
src/utils/: collision.c  collision.h  helper.c  helper.h  random.c  random.h
